- fix layout to use paddings instead of margins for showing content scrolling behind the header card - fix width for app layout children to push scrollbar to edge of window

--- a/src/migrator-management-canister-frontend/src/components/AppLayout/AppLayout.css
+++ b/src/migrator-management-canister-frontend/src/components/AppLayout/AppLayout.css
@@ -7,6 +7,11 @@
   height: 100vh;
 }
 
+.app-layout-header-wrapper {
+  /* margin-bottom: 6rem; */
+  /* padding-bottom: 5rem; */
+}
+
 .app-layout-header {
   position: absolute;
   min-width: 95%;
@@ -19,19 +24,24 @@
 
 .app-layout-children-container {
   padding: 1rem;
-  max-width: 80vw;
+  max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  padding-top: 6rem;
+  /* padding-top: 6rem; */
   display: flex;
   flex-direction: column;
   align-items: stretch;
   height: 100vh;
   min-height: 0;
   overflow-y: auto;
+  padding-top: 5rem;
 }
 
 @media (max-width: 480px) {
+  .app-layout-header-wrapper {
+    margin-bottom: 0rem;
+  }
+
   .app-layout-children-container {
     max-width: 100vw;
     width: 100%;
