--- a/src/migrator-management-canister-frontend/src/components/HomePage/HomePage.css
+++ b/src/migrator-management-canister-frontend/src/components/HomePage/HomePage.css
@@ -4,7 +4,7 @@
   /* margin-top: 10rem; */
   /* margin-top: -2rem; */
   min-height: calc(100vh - 54px);
-
+  padding-top: 2rem;
   background-color: var(--background);
   height: 100%;
   /* overflow-y: hidden; */
@@ -357,7 +357,7 @@
 
 @media (max-width: 480px) {
   .home-container {
-    padding: 1.5rem 0.25rem;
+    padding: 0rem 0.25rem;
     min-height: calc(100vh - 64px);
   }
 
