--- a/src/migrator-management-canister-frontend/src/components/WebsitesComponent/CreateProjectForm.css
+++ b/src/migrator-management-canister-frontend/src/components/WebsitesComponent/CreateProjectForm.css
@@ -8,6 +8,7 @@
   background: var(--background);
   padding: 2rem;
   overflow-y: auto;
+  z-index: 1;
 }
 
 .project-form-grid {
