--- a/src/migrator-management-canister-frontend/src/components/WebsitesComponent/WebsitesComponent.css
+++ b/src/migrator-management-canister-frontend/src/components/WebsitesComponent/WebsitesComponent.css
@@ -1,7 +1,7 @@
 .websites-container {
   padding: 2rem;
   min-height: calc(100vh - 64px);
-  /* margin-top: 10rem; */
+  padding-top: 5rem;
   background-color: var(--background);
   height: 100%;
   overflow-y: hidden;
